--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -42,10 +42,6 @@ nav a:hover{
     color: #30C5FF;
 }
 
-#hero-msg h1, #hero-msg h4{
-    text-align: center;
-}
-
 .button-box{
     text-align: center;
 }
@@ -58,8 +54,6 @@ main section{
     height: 725px;
     background-color:#235789 ;
 }
-
-
 
 .book, .join{
     background-color:#235789 ;
@@ -74,12 +68,6 @@ main section{
     background-color:#D1603D ;
     color: #F7E733;
 }
-.msg{
-    background-color:#235789 ;
-    line-height: 1.5em;
-    padding: 35px;
-}
-
 
 .home-title{
     color: #052e05;
@@ -92,6 +80,12 @@ h4{
     color: #052e05;
 }
 
+/** msg stuff **/
+.msg{
+    background-color:#235789 ;
+    line-height: 1.5em;
+    padding: 35px;}
+
 .msg h2{
  color: #052e05;
  font-family: "IM Fell French Canon";   
@@ -101,6 +95,10 @@ h4{
     color: white;
     font-size: 0.8em;
     padding-bottom: 15px;
+}
+
+#hero-msg h1, #hero-msg h4{
+    text-align: center;
 }
 
 .logo{
