--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -17,19 +17,29 @@ body{
 
 h2{
     margin: 0;
-    color: #052e05;
+    color: honeydew;
 }
 
 /** header stuff **/
 header{
     background-color:#235789 ;
+    display: grid;
+    grid-template-columns: 150px auto;
 }
 
 #logo_link{
     padding-top: 5px;
+    justify-self: center;
+    align-self: center;
 }
 
 /** navigation styles **/
+
+nav {
+    display: flex;
+    justify-content: space-around;
+}
+
 nav a{
     text-align: center;
     color: #F7E733;
@@ -53,6 +63,8 @@ main section{
 #background {
     height: 725px;
     background-color:#235789 ;
+    grid-column: 1/11;
+    grid-row: 4/9;
 }
 
 .book, .join{
@@ -69,8 +81,13 @@ main section{
     color: #F7E733;
 }
 
+.home-grid{
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+}
+
 .home-title{
-    color: #052e05;
+    color: honeydew;
     font-family: "IM Fell French Canon";
     font-size: 2em;
     margin-top: 10px;
@@ -84,10 +101,14 @@ h4{
 .msg{
     background-color:#235789 ;
     line-height: 1.5em;
-    padding: 35px;}
+    padding: 35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #6f7364;
+}
 
 .msg h2{
- color: #052e05;
+ color: #30C5FF;
  font-family: "IM Fell French Canon";   
 }
 
@@ -95,10 +116,6 @@ h4{
     color: white;
     font-size: 0.8em;
     padding-bottom: 15px;
-}
-
-#hero-msg h1, #hero-msg h4{
-    text-align: center;
 }
 
 .logo{
@@ -110,16 +127,79 @@ h4{
     padding-top: 10px;
 }
 
+/* hero icons*/
 #hero-img{
     width: 100%;
 }
 
+#hero-msg h1, #hero-msg h4{
+    text-align: center;
+}
+
+#hero-msg h4{
+    color: honeydew;
+}
+
+#hero{
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px; 
+}
+
+#hero-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
+
+#hero-msg{
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
+}
+
+/** card/img*/
 .rivers-card, .camping-card, .rapids-card{
      margin: 200px 0;
 }  
 
+.rivers-card{
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+.camping-card{
+    grid-column: 5/7;
+    grid-row: 2/3;
+}
+.rapids-card{
+    grid-column: 8/10;
+    grid-row: 2/3;
+}
+#background{
+    grid-column: 1/11;
+    grid-row: 4/9;
+}
+.mountains{
+    width: 100%;
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+
 .card-img{
+    width: 100%;
     border: 10px solid #30C5FF;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+
+.card-img:hover {
+    opacity: .6;
+    transform: scale(1.1);
+}
+
+.card-img, .mountains {
+    width: 100%;
 }
 
 main section img {
@@ -132,6 +212,9 @@ footer{
     color: #D1603D;
     padding: 25px 50px;
     margin-top: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 footer a{
     color: #D1603D;
@@ -150,4 +233,47 @@ footer p a:hover {
 
 footer .social img{
     padding-top: 15px;
+}
+
+/** media queries **/
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #6f7364;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
 }
