--- a/finalproject/styles/styles.css
+++ b/finalproject/styles/styles.css
@@ -40,13 +40,14 @@ body{
 
 .textbox{
     display: grid;
-    grid-template-columns: 20px 1fr 1fr 20px;
+    grid-template-columns: 20px 1fr 1fr 1fr 1fr 20px;
     grid-template-rows: 1fr 1fr 1fr ;
 }
 
 #hero-img{
     width: 100%;
-    grid-column: 3/4;
+    grid-column: 4/6;
+    z-index: 0;
 }
 
 #hero h3{
@@ -62,8 +63,9 @@ body{
     padding: 10px;
     box-shadow: 5px 5px 10px #262822;    
     color: #EAEAEB;
-    grid-column: 2/3;
+    grid-column: 2/5;
     margin: 100px 0;
+    z-index: 1;
 }
 
 .quote-1{
