--- a/componentstyles.css
+++ b/componentstyles.css
@@ -1,6 +1,6 @@
 /* Style the buttons that are used to open and close the accordion panel */
 .accordion {
-    background-color: #b14cbe;
+    background-color: #b94cc7;
     color: black;
     cursor: pointer;
     padding: 18px;
