--- a/finalproject/styles/styles.css
+++ b/finalproject/styles/styles.css
@@ -30,7 +30,7 @@ nav a:hover{
     color: #1F7A8C;
 }
 
-/** body**/
+/**  home page body**/
 body{
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #EAEAEB;
@@ -38,16 +38,9 @@ body{
     padding: 0;
 }
 
-.textbox{
-    display: grid;
-    grid-template-columns: 20px 1fr 1fr 1fr 1fr 20px;
-    grid-template-rows: 1fr 1fr 1fr ;
-}
-
 #hero-img{
     width: 100%;
-    grid-column: 4/6;
-    z-index: 0;
+    
 }
 
 #hero h3{
@@ -57,15 +50,34 @@ body{
     font-size: 30px;
 }
 
+/** main home page **/
+.textbox{
+    display: grid;
+    grid-template-columns: 50px 1fr 1fr 1fr 1fr 1fr 1fr 1fr 50px;
+    grid-template-rows: 20px 5fr 1fr;
+}
+
 .textbox p{
     background-color:#022B3A ;
-    line-height: 1.5em;        
+    line-height: 2em;        
     padding: 10px;
     box-shadow: 5px 5px 10px #262822;    
     color: #EAEAEB;
+    margin: 50px 0;
     grid-column: 2/5;
-    margin: 100px 0;
-    z-index: 1;
+    grid-row: 2/3;
+}
+
+#text-img{
+    grid-column: 6/8;
+    grid-row: 2/3;
+    margin: auto;
+}
+
+.quotes{
+    display: grid;
+    grid-template-columns: 50px 1fr 1fr 1fr 1fr 1fr 50px;
+    grid-template-rows: 1fr 3fr 1fr 3fr 1fr;
 }
 
 .quote-1{
@@ -74,6 +86,8 @@ body{
     padding: 35px;
     box-shadow: 5px 5px 10px #262822;
     color: #EAEAEB;
+    grid-column: 2/7;
+    grid-row: 2/3;
 }
 
 .quote-2{
@@ -82,4 +96,139 @@ body{
     padding: 35px;
     box-shadow: 5px 5px 10px #262822;
     color: #EAEAEB;
+    grid-column: 2/7;
+    grid-row: 4/5;
+}
+ 
+
+/** movies review **/
+.movie-one{
+    display: grid;
+    grid-template-columns: repeat(12, 1fr) ;
+    grid-template-rows: 150px 1fr 100px ;
+}
+
+.movie-two{
+    display: grid;
+    grid-template-columns: repeat(12, 1fr) ;
+    grid-template-rows: 150px 1fr 100px ;
+}
+
+.movie-three{
+    display: grid;
+    grid-template-columns: repeat(12, 1fr) ;
+    grid-template-rows: 150px 1fr 100px ;
+}
+
+.movie-one h2{
+    padding: 10px;
+    grid-row: 1/2;
+    grid-column: 6/9;
+    text-align: center;
+    color: #F23602;
+}
+
+.movie-one img{
+    grid-column: 2/7;
+    grid-row: 2/3;
+    z-index: 0;
+    border-style: solid;
+    border-width: 5px;
+    border-color: #022B3A;
+}
+
+.movie-one p{
+    grid-column: 6/12;
+    grid-row: 2/3;
+    z-index: 1;
+    background-color:#1F7A8C ;
+    line-height: 1.5em;
+    padding: 35px;
+    box-shadow: 5px 5px 10px #262822;
+    color: #EAEAEB;
+    text-align: center;
+}
+
+.movie-two h2{
+    grid-row: 1/2;
+    grid-column: 6/9;
+    color: #F23602;
+}
+
+.movie-two img{
+    grid-column: 7/11;
+    grid-row: 2/3;
+    z-index: 0;
+    border-style: solid;
+    border-width: 5px;
+    border-color: #022B3A;
+}
+
+.movie-two p{
+    grid-column: 2/8;
+    grid-row: 2/3;
+    z-index: 1;
+    background-color:#1F7A8C ;
+    line-height: 1.5em;
+    padding: 35px;
+    box-shadow: 5px 5px 10px #262822;
+    color: #EAEAEB;
+    text-align: center;
+}
+
+.movie-three h2{
+    grid-row: 1/2;
+    grid-column: 6/9;
+    color: #F23602;
+    text-align: center;
+}
+
+.movie-three img{
+    grid-column: 2/7;
+    grid-row: 2/3;
+    z-index: 0;
+    border-style: solid;
+    border-width: 5px;
+    border-color: #022B3A;
+}
+
+.movie-three p{
+    grid-column: 7/12;
+    grid-row: 2/3;
+    z-index: 1;
+    background-color:#1F7A8C ;
+    line-height: 1.5em;
+    padding: 35px;
+    box-shadow: 5px 5px 10px #262822;
+    color: #EAEAEB;
+    text-align: center;
+}
+
+/** footer **/
+footer{
+    background-color:black ;
+    color: yellow;
+    padding: 25px 50px;
+    margin-top: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+footer a{
+    color: yellow;
+    text-decoration: none;
+}
+footer a:hover{
+    color: #1F7A8C;
+}
+footer p {
+    font-size: 1.2em;
+}   
+
+footer p a:hover {
+    text-decoration: underline;
+}   
+
+footer .social img{
+    padding-top: 15px;
 }
