--- a/finalproject/styles/styles.css
+++ b/finalproject/styles/styles.css
@@ -46,8 +46,8 @@ body{
 #hero h3{
     text-align: center;
     color: #022B3A;
-    margin: 100px 0;
-    font-size: 30px;
+    margin: 50px 0;
+    font-size: 40px;
 }
 
 /** main home page **/
@@ -66,6 +66,7 @@ body{
     margin: 50px 0;
     grid-column: 2/5;
     grid-row: 2/3;
+    text-align: center;
 }
 
 #text-img{
@@ -78,6 +79,8 @@ body{
     display: grid;
     grid-template-columns: 50px 1fr 1fr 1fr 1fr 1fr 50px;
     grid-template-rows: 1fr 3fr 1fr 3fr 1fr;
+    font-size: 24px;
+    text-align: center;
 }
 
 .quote-1{
@@ -126,6 +129,7 @@ body{
     grid-column: 6/9;
     text-align: center;
     color: #F23602;
+    font-size: 28px;
 }
 
 .movie-one img{
@@ -153,6 +157,7 @@ body{
     grid-row: 1/2;
     grid-column: 6/9;
     color: #F23602;
+    font-size: 28px;
 }
 
 .movie-two img{
@@ -181,6 +186,7 @@ body{
     grid-column: 6/9;
     color: #F23602;
     text-align: center;
+    font-size: 28px;
 }
 
 .movie-three img{
@@ -202,6 +208,174 @@ body{
     box-shadow: 5px 5px 10px #262822;
     color: #EAEAEB;
     text-align: center;
+}
+
+/** characters page**/
+.charactersmain{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: repeat(7, 1fr);
+}
+
+.originals{
+    text-align: center;
+    color: yellow;
+    padding: 35px;
+    grid-row: 1/2;
+    grid-column: 1/5;
+    margin: auto;
+    font-size: 35px;
+}
+.sequels{
+    text-align: center;
+    color: yellow;
+    padding: 35px;
+    grid-row: 5/6;
+    grid-column: 1/5;
+    margin: auto;
+    font-size: 35px;
+}
+
+.characters{
+    background-color: #022B3A;
+}
+
+
+.Lukeskywalker img{
+    border-radius: 50%;
+    float: left;
+    padding: 10px;
+    grid-column: 1/3;
+    grid-row: 2/3;
+}
+.Lukeskywalker{
+    color: #D5D3EE;
+    /**height: 200px;
+    width: 45%;**/
+    padding: 20px;
+    text-align: center;
+    grid-column: 1/3;
+    grid-row: 2/3;
+}
+
+.Princessleia img{
+    border-radius: 50%;
+    float: left;
+    padding: 10px;
+}
+.Princessleia{
+    color: #D5D3EE;
+    /**height: 200px;
+    width: 45%;**/
+    padding: 20px;
+    text-align: center;
+    grid-column: 3/5;
+    grid-row: 2/3;
+}
+
+.HanSolo img{
+    border-radius: 50%;
+    float: left;
+    padding: 10px;
+}
+.HanSolo{
+    color: #D5D3EE;
+    /**height: 200px;
+    width: 45%;**/
+    padding: 20px;
+    text-align: center;
+    grid-column: 1/3;
+    grid-row: 3/4;
+}
+
+.DarthVader img{
+    border-radius: 50%;
+    float: left;
+    padding: 10px;
+}
+.DarthVader{
+    color: #D5D3EE;
+    /**height: 200px;
+    width: 45%;**/
+    padding: 20px;
+    text-align: center;
+    grid-column: 3/5;
+    grid-row: 3/4;
+}
+
+.Yoda img{
+    border-radius: 50%;
+    float: left;
+    padding: 10px;
+}
+.Yoda{
+    color: #D5D3EE;
+    /**height: 200px;
+    width: 45%;**/
+    padding: 20px;
+    text-align: center;
+    grid-column: 2/4;
+    grid-row: 4/5;
+}
+
+.Rey img{
+    border-radius: 50%;
+    float: left;
+    padding: 10px;
+}
+.Rey{
+    color: #D5D3EE;
+    /**height: 200px;
+    width: 45%;**/
+    padding: 20px;
+    text-align: center;
+    grid-column: 1/3;
+    grid-row: 6/7;
+}
+
+.KyloRen img{
+    border-radius: 50%;
+    float: left;
+    padding: 10px;
+}
+.KyloRen{
+    color: #D5D3EE;
+    /**height: 200px;
+    width: 45%;**/
+    padding: 20px;
+    text-align: center;
+    grid-column: 3/5;
+    grid-row: 6/7;
+}
+
+.Finn img{
+    border-radius: 50%;
+    float: left;
+    padding: 10px;
+}
+.Finn{
+    color: #D5D3EE;
+    /**height: 200px;
+    width: 45%;**/
+    padding: 20px;
+    text-align: center;
+    grid-column: 1/3;
+    grid-row: 7/8;
+}
+
+.PoeDameron img{
+    border-radius: 50%;
+    float: left;
+    padding: 10px;
+}
+.PoeDameron{
+    color: #D5D3EE;
+    /**height: 200px;
+    width: 45%;**/
+    padding: 20px;
+    text-align: center;
+    grid-column: 3/5;
+    grid-row: 7/8;
 }
 
 /** footer **/
