--- a/finalproject/styles/styles.css
+++ b/finalproject/styles/styles.css
@@ -60,13 +60,14 @@ body{
 .textbox p{
     background-color:#022B3A ;
     line-height: 2em;        
-    padding: 10px;
+    padding: 30px;
     box-shadow: 5px 5px 10px #262822;    
     color: #EAEAEB;
     margin: 50px 0;
     grid-column: 2/5;
     grid-row: 2/3;
     text-align: center;
+    font-size: 16px;
 }
 
 #text-img{
@@ -124,11 +125,11 @@ body{
 }
 
 .movie-one h2{
-    padding: 10px;
+    padding: 20px;
     grid-row: 1/2;
     grid-column: 6/9;
     text-align: center;
-    color: #F23602;
+    color: #022B3A;
     font-size: 28px;
 }
 
@@ -156,8 +157,9 @@ body{
 .movie-two h2{
     grid-row: 1/2;
     grid-column: 6/9;
-    color: #F23602;
+    color: #022B3A;
     font-size: 28px;
+    padding: 40px;
 }
 
 .movie-two img{
@@ -184,7 +186,7 @@ body{
 .movie-three h2{
     grid-row: 1/2;
     grid-column: 6/9;
-    color: #F23602;
+    color: #022B3A;
     text-align: center;
     font-size: 28px;
 }
