--- a/finalproject/styles/site-plan.css
+++ b/finalproject/styles/site-plan.css
@@ -8,7 +8,7 @@ Fonts are separated by a | */
   --primary-color: #EAEAEB   ;
   --secondary-color: #D5D3EE ;
   --accent1-color: #1F7A8C;
-  --accent2-color: #F23602;
+  --accent2-color: yellow;
   --accent3-color: #022B3A;
 
   /* change the values below to your chosen font(s) */
